# valetudo-dreameadapter-map

./: .env  Cargo.toml  Dockerfile  Justfile  breakout.xcf  docker-compose.yml
migrations/: 20230919224438_create_db.sql
src/: bot.rs  db.rs  http.rs  lib.rs  main.rs
static/: index.html
