[package]
name = "valetudo-dreameadapter-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["json"] }
frankenstein = { version = "0.27.0", default-features = false, features = ["async-http-client"] }
futures = "0.3.28"
mime_guess = "2.0.4"
rust-embed = { version = "8.0.0", features = ["axum-ex"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "migrate", "tls-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tower-service = "0.3.2"
